[package]
name = "tree-sitter-dscexpression"
description = "DSCExpression grammar for the tree-sitter parsing library"
version = "1.0.0"
keywords = ["incremental", "parsing", "DSCExpression"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/powershell/dsc"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-rust = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-language = { workspace = true }

[build-dependencies]
cc = { workspace = true }
