[package]
name = "tree-sitter-ssh-server-config"
description = "ssh-server-config grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "ssh-server-config"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/powershell/dsc"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"
doctest = false

[dependencies]
tree-sitter-rust = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-language = { workspace = true }

[build-dependencies]
cc = { workspace = true }
