[package]
name    = "dsc-lib-jsonschema-macros"
version = "0.0.0"
edition = "2024"

[lib]
name       = "dsc_lib_jsonschema_macros"
path       = "src/lib.rs"
proc-macro = true
doctest    = false # Disable doc tests by default for compilation speed

[dependencies]
darling     =  { workspace = true }
proc-macro2 =  { workspace = true }
quote       =  { workspace = true }
syn         =  { workspace = true }
