[package]
name = "dsc-resource-windows-update"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wu_dsc"
path = "src/main.rs"

[dependencies]
rust-i18n = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
