[package]
name = "filesys"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version ="4.5", features = ["derive"] }
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
serde = "1.0"
serde_json = "1.0"
schemars = "0.8"
tracing = { version = "0.1" }
sha256 = { version = "1.5.0" }
fs_extra = { version = "1.2.0" }
